objects/DataIntegrationCredential__mdt.object
<CustomObject>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SecurityToken__c</fullName>
        <label>SecurityToken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TokenURL__c</fullName>
        <label>TokenURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <type>TextArea</type>
    </fields>
    <label>DataIntegrationCredential</label>
    <pluralLabel>DataIntegrationCredentials</pluralLabel>
</CustomObject>